# hybrid-cognitive-architecture

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  CHAT_SESSION_HANDOFF.md  COMPLETE FEATURE OVERVIEW - HYBRID AI.md  COQUI_XTTS_HANDOFF.md  CURRENT_ISSUES.md  Chatgpt demo ui.js  Chatgpt-demo-ui-v2.js  Claude UI Mockup.ts  Differences v1.md  Differences v2.md  ENVIRONMENT_VARIABLES.md  FINAL_PYTHON_SPLIT_DECISION.md  GIT_CHANGES_BREAKDOWN.md  HANDOFF_SUMMARY.md  Implementation Plan v3.md  LICENSE  Makefile  OPTIMAL_PYTHON_SPLIT_ANALYSIS.md  PROJECT_STRUCTURE.md  PYTHON_SPLIT_MIGRATION_PLAN.md  Perplexity JSON-Prompt-v1.3.json  Premium Spacious UI mockup.js  README.md  REFACTORING_HANDOFF.md  SECURITY.md  SESSION_STATUS_AUGUST_5.md  SMART_ROUTER_HANDOFF.md  STARTUP_COMMAND_GUIDE.md  SYSTEMATIC_DEBUG_PLAN.md  SYSTEM_PERFECTION_ROADMAP.md  SYSTEM_VERIFICATION_GUIDE.md  TIGERGRAPH_SOLUTION_SUMMARY.md  UI Mockup v4.ts  UI Prompt.md  V2 COMPLETE FEATURE OVERVIEW - HYBRID AI.md  V3 COMPLETE FEATURE OVERVIEW - HYBRID AI.md  VOICE_MIGRATION_COMPLETE.md  (+37 more)
.github/workflows/: code-quality.yml
archive/: CODE_CLEANUP_AUDIT.md  REFACTORING_HANDOFF_V2.md  SESSION_SUMMARY_AUG_4_2025.md  code_audit_progress.md
clients/: __init__.py  llama_cpp_client.py  model_router.py  ollama_client.py  redis_client.py  tigergraph_client.py  tigervector_client.py
config/: __init__.py  llama_cpp_models.py  models.py
core/: cache_integration.py  error_boundaries.py  kip.py  logging_config.py  orchestrator.py  pheromind.py  prompt_cache.py  verifier.py
core/kip/: __init__.py  agents.py  budget_manager.py  economic_analyzer.py  exceptions.py  models.py  tools.py  transaction_processor.py  treasury.py  treasury_core.py
core/orchestrator/: __init__.py  models.py  orchestrator.py  processing_nodes.py  processing_nodes_backup.py  processing_nodes_new.py  state_machine.py  streaming.py  synthesis.py
core/orchestrator/nodes/: __init__.py  base.py  council_nodes.py  kip_nodes.py  pheromind_nodes.py  simple_generator_verifier_node.py  smart_router_nodes.py  support_nodes.py
decisions/: 001-why-ollama-over-vllm.md  002-why-tigergraph-over-postgres.md  003-why-smart-router-architecture.md  004-coqui-xtts-v2-for-council-voices.md  005-python-313-311-microservice-architecture.md  template.md
docker/vllm/: Dockerfile
docs/: AI Council Constitution v5.4 Final.md  AUTONOMOUS_TRADING_SYSTEM.md  DEBUGGING_GUIDE.md  HANDOFF_AUG_10_2025_EVENING.md  Hybrid AI Council_ Architectural Blueprint v3.8 (Final).md  INTEGRATION_MAP.md  KIP_AUTONOMOUS_AGENTS_EXPLAINED.md  MIDDLEWARE_FIX_DOCUMENTATION.md  MULTI_MODEL_TEST_GUIDE.md  REST_API_FIX_DOCUMENTATION.md  SESSION_SUMMARY_AUG_10_2025.md  TigerGraph_Community_Edition_Setup.md  Unified Implementation Plan v2.3 (Final).md  dev-log-Hybrid-AI-Council.md
endpoints/: __init__.py  chat.py  health.py  voice.py
middleware/: __init__.py  rate_limiting.py  request_validation.py  security_headers.py
ollama/: Modelfile.huihui-oss20b
project-docs/: CODE_PATTERNS.md  SYSTEM_VERIFICATION_GUIDE.md  code-audit-prompt.md
python311-services/: README.md  SETUP_GUIDE.md  pyproject.toml  python311_deps.txt  quick_test.py  setup.py
python311-services/tests/: README.md  __init__.py  test_production_voice_legacy.py  test_voice_engines.py  test_voice_service.py
python311-services/voice/: __init__.py  main.py
python311-services/voice/engines/: __init__.py  voice_engines.py
schemas/: manual_tigergraph_examples.gsql  schema.gsql
scripts/: README.md  check-file-sizes.py  check_financial_status.py  check_ollama_health.py  init_tigergraph.py  quick_db_check.py  setup-tigergraph.ps1  setup-tigergraph.sh  smart_tigergraph_init.py  start_everything.py  start_llamacpp_servers.py  start_tigergraph_safe.py  test_setup.py  verify_system.py
static/: claude-ui-demo.html  claude-ui-mockup.html  index.html  realtime-voice.html  voice-test.html
static/css/: styles.css
static/js/: client.js
tests/: __init__.py  run_tests.py  test_api_endpoints.py  test_chaos.py  test_cognitive_nodes.py  test_configuration.py  test_economic_behaviors.py  test_end_to_end_workflows.py  test_initial.py  test_integration.py  test_kip_tools.py  test_production_readiness.py  test_prompt_cache.py  test_security_middleware.py  test_setup.py  test_smart_router.py  test_voice_complete.py  test_voice_foundation.py  test_voice_microservice_integration.py  test_websocket_streaming.py
tests/voice_foundation/: test_kyutai_tts_only.py  test_production_voice.py
tools/: __init__.py  marketing_tools_plan.md  web_tools.py
utils/: __init__.py  client_utils.py  error_utils.py  websocket_utils.py
voice_foundation/: README.md  __init__.py  create_test_audio.py  orchestrator_integration.py  production_voice_engines.py  requirements.txt  simple_voice_pipeline.py  test_pipeline.py  voice_client.py
websocket_handlers/: __init__.py  chat_handlers.py  handlers.py  voice_handlers.py
websockets/: __init__.py  handlers.py  voice_handlers.py
