[tool.poetry]
name = "hybrid-cognitive-architecture"
version = "0.1.0"
description = "An autonomous AI system with a three-layered cognitive architecture."
authors = ["Redacted Foundry <ops@redactedfoundry.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
redis = "^5.0.0"
pytigergraph = "^1.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"